--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "dependencies": {
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-scripts": "1.0.13"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "d3": "^4.10.2",
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.6",
+    "materialize-css": "^0.100.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.9.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.6.2",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.4.0",
+    "style-loader": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
