--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "d3": "^4.10.2",
     "redux": "^3.7.2",
     "react-redux": "^5.0.6",
-    "materialize-css": "^0.100.2"
+    "react-bootstrap": "^0.31.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
