--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13",
-    "d3": "^4.10.2",
-    "redux": "^3.7.2",
-    "react-redux": "^5.0.6",
-    "react-bootstrap": "^0.31.3"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "html-webpack-plugin": "^2.9.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.6.2",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.4.0",
-    "style-loader": "^0.13.0"
+    "bootstrap": "^4.5.3",
+    "d3": "^6.3.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3721 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
